# JuuCraft

./: .gitignore  CMakeLists.txt  Camera.cpp  Chunk.cpp  Shader.cpp  main.cpp
include/: Camera.h  Chunk.h  FaceDirection.h  InputManager.h  Mesh.h  Shader.h
include/glad/: glad.h
include/src/: glad.c
shaders/: shader.fs  shader.vs
src/: Camera.cpp  Chunk.cpp  InputManager.cpp  Mesh.cpp  TextureManager.cpp  WindowManager.cpp  main.cpp
utils/: Config.h  TextureManager.h  WindowManager.h
